--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,9 @@ title: 'Smoothers in the Field: GAMs for Capturing Treatment Effects and Spatial
   in Plant Breeding Field Trials'
 author: "Didier Murillo"
 date: "2025-05-03"
-output: html_document
+output:
+  distill::distill_article:
+    highlight: kate  # or choose 'tango', 'espresso', etc.
 ---
 
 ```{r setup, include=FALSE, comment=NA}
@@ -15,15 +17,19 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r, echo=FALSE, eval=TRUE, warning=FALSE, comment=NA}
-library(mgcv)
-library(asreml)
-library(dplyr)
-library(tidyr)
-library(ggplot2)
-library(patchwork)
-library(kableExtra)
-library(viridis)
+```{r, echo=FALSE, eval=TRUE, warning=FALSE, comment=NA, include=FALSE}
+suppressMessages({
+  suppressWarnings({
+    library(mgcv)
+    library(asreml)
+    library(dplyr)
+    library(tidyr)
+    library(ggplot2)
+    library(patchwork)
+    library(kableExtra)
+    library(viridis)
+  })
+})
 ```
 
 ```{r, echo=FALSE, eval=TRUE, warning=FALSE, comment=NA}
@@ -85,7 +91,10 @@ In a basic GAM, we replace strictly linear terms with smooth functions estimated
 
 We begin with a model for the yield $y_{ijk}$ at each plot $(i,j)$ with treatment $k$:
 
-$$Yield = f_1(ROW) + f_2(COLUMN) + f_3(ROW_{fc}) + f_4(COLUMN_{fc}) + f_5(TREATMENT)  $$
+<div style="font-size: 80%">
+$$YIELD = f_1(ROW) + f_2(COLUMN) + f_3(ROW_{fc}) + f_4(COLUMN_{fc}) + f_5(TREATMENT)$$
+</div>
+
 Where:
 
 - $f_1$ and $f_2$ are smooth spatial trends modeled with penalized splines (bs = "ps")
@@ -109,14 +118,14 @@ gam_m1 <- bam(
 
 #### Genotype-Level Predictions
 
-To extract genotype-level predictions from the model, we predict treatment effects while fixing all spatial covariates at their field-centered values.
+To extract genotype-level predictions from the model, we predict treatment effects while fixing all spatial covariates at their field-centered values. The way we created the newdata set for GAM model prediction is showing below:
 
-```{r, echo=FALSE, eval=TRUE, comment=NA}
+```{r, echo=TRUE, eval=TRUE, comment=NA}
 # Center values for marginal prediction
 mean_row <- mean(yield_data_single_gam$ROW)
 mean_column <- mean(yield_data_single_gam$COLUMN)
-row_fc_center <- as.factor(round(mean_row))
-col_fc_center <- as.factor(round(mean_column))
+row_fc_center <- as.factor(mean_row)
+col_fc_center <- as.factor(mean_column)
 
 # Generate prediction dataset
 newdata_gam <- tibble::tibble(
@@ -126,7 +135,9 @@ newdata_gam <- tibble::tibble(
 	ROW_fc = row_fc_center,
 	COLUMN_fc = col_fc_center
 )
+```
 
+```{r, echo=FALSE, eval=TRUE, comment=NA}
 # Add confidence intervals
 add_confidence_intervals <- function(tbl, pred_col, se_col, level = 0.95) {
   z <- qnorm(1 - (1 - level) / 2)
@@ -138,6 +149,7 @@ add_confidence_intervals <- function(tbl, pred_col, se_col, level = 0.95) {
 }
 ```
 
+Then we use the dataset `newdata_gam` to predict based on the GAM model.
 
 ```{r, echo=TRUE, eval=TRUE, comment=NA}
 preds_treatment <- predict(gam_m1, newdata = newdata_gam, se.fit = TRUE, type = "response")
@@ -181,7 +193,7 @@ asreml_m1 <- update(asreml_m1)
 ```
 
 
-```{r asreml_model1, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
+```{r asreml_model1, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE, results='hide', include=FALSE}
 suppressMessages({
   suppressWarnings({
 			asreml_m1 <- asreml(
@@ -200,16 +212,20 @@ suppressMessages({
 
 #### Genotype-Level Predictions - ASReml
 
-Once the ASReml model is fitted, extracting the predicted genotype is straightforward using the `predict()` function. 
+Once the ASReml model is fitted, extracting the predicted genotype is straightforward using the `predict()` function. We augment the predictions with 95% confidence intervals based on the standard errors:
 
-```{r}
+```{r, eval=FALSE, echo=TRUE, message=FALSE, warning=FALSE, results='hide'}
 pred_asreml <- predict(asreml_m1, classify = "TREATMENT", sed = TRUE)$pvals
+pred_asreml |> 
+	add_confidence_intervals(pred_col = predicted.value, se_col = std.error)
 ```
 
-We augment the predictions with 95% confidence intervals based on the standard errors:
 
 ```{r, eval=TRUE, echo=FALSE}
-pred_asreml |> add_confidence_intervals(pred_col = predicted.value, se_col = std.error) |> head(10) |> kable()
+pred_asreml |> 
+	add_confidence_intervals(pred_col = predicted.value, se_col = std.error) |> 
+	head(10) |> 
+	kable()
 ```
 
 ### Model fit diagnostics
@@ -310,14 +326,17 @@ The diagnostic plots for both the GAM and ASReml models show some clear limitati
 
 ### Improving the GAM Model
 
-To further evaluate the flexibility of Generalized Additive Models, we introduced a more complex spatial structure into the model. The objective here is to better capture residual spatial trends and improve model fit. While ASReml supports two-dimensional autoregressive residual structures (AR1 ⊗ AR1), the mgcv package in R only supports autoregressive modeling along a single dimension. To compensate for this limitation, we included a tensor product smoother between rows and columns using random effect bases (bs = "re"). This tensor interaction term acts like a spatial nugget, allowing us to capture localized deviations not explained by marginal row or column effects.
+To further evaluate the flexibility of Generalized Additive Models, we introduced a more complex spatial structure into the model. The objective here is to better capture residual spatial trends and improve model fit. While `ASReml` supports two-dimensional autoregressive residual structures (`AR1 ⊗ AR1`), the `mgcv` package in R only supports autoregressive modeling along a single dimension. To compensate for this limitation, we included a tensor product smoother between rows and columns using random effect bases (`bs = "re"`). This tensor interaction term acts like a spatial nugget, allowing us to capture localized deviations not explained by marginal row or column effects.
 
-Additionally, we modeled residual correlation along the row dimension using an AR(1) structure. Since mgcv::bam() requires the autocorrelation parameter rho to be manually specified, we estimated it via a grid search and found the best-performing value to be rho = 0.55.
+Additionally, we modeled residual correlation along the row dimension using an `AR(1)` structure. Since `mgcv::bam()` requires the autocorrelation parameter `rho` to be manually specified, we estimated it via a grid search and found the best-performing value to be `rho = 0.55`.
 
-$$Yield = f_1(ROW) + f_2(COLUMN) + f_3(ROW_{fc}) + f_4(COLUMN_{fc}) + f_5(TREATMENT) + f_6(ROW_{fc}, COLUMN_{fc})  $$
+<div style="font-size: 80%">
+$$YIELD = f_1(ROW) + f_2(COLUMN) + f_3(ROW_{fc}) + f_4(COLUMN_{fc}) + f_5(TREATMENT) +$$
+$$f_6(ROW_{fc}, COLUMN_{fc})$$
+</div>
 Where:
 
-- $f_6$ is the tensor product with random effect (bs = "re")
+- $f_6$ is the tensor product with random effects (bs = "re") for both factors.
 
 The extended GAM model is specified as follows:
 
@@ -350,11 +369,14 @@ BLUPs_gam_single2 <- newdata_gam |>
 ```
 
 ```{r comment=NA, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
-BLUPs_gam_single2 |> head(10) |> kable()
+BLUPs_gam_single2 |> 
+	head(10) |> 
+	kable()
 ```
 
-
 ### Fully Spatial ASReml Model
+
+To take full advantage of ASReml’s capabilities for modeling spatial correlation, we extended the previous model by specifying a two-dimensional autoregressive (`AR1 ⊗ AR1`) residual structure. This approach allows the model to directly account for residual dependencies across both rows and columns of the field layout. This is one of `ASReml’s` key strengths.
 
 ```{r asreml_model02, eval=FALSE, echo=TRUE, message=FALSE, warning=FALSE}
 asreml_m2 <- asreml(
@@ -365,11 +387,11 @@ asreml_m2 <- asreml(
 	trace = FALSE
 )
 
-asreml_m1 <- update(asreml_m1)
+asreml_m2 <- update(asreml_m2)
 ```
 
 
-```{r asreml_model12, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
+```{r asreml_model12, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE, include=FALSE}
 suppressMessages({
   suppressWarnings({
 			asreml_m2 <- asreml(
@@ -380,17 +402,28 @@ suppressMessages({
 				trace = FALSE
 			)
 			
-			asreml_m1 <- update(asreml_m2)
-			
+			asreml_m2 <- update(asreml_m2)
 			pred_asreml2 <- predict(asreml_m2, classify = "TREATMENT", sed = TRUE)$pvals
   })
 })
 ```
 
-The Mixed model predictions are now 
+#### Genotype-Level Predictions - ASReml
 
-```{r}
-pred_asreml2 |> add_confidence_intervals(pred_col = predicted.value, se_col = std.error) |> head(10) |> kable()
+The new fashion Linear Mixed model predictions are now:
+
+```{r, eval=FALSE, echo=TRUE, message=FALSE, warning=FALSE, results='hide'}
+pred_asreml2 <- predict(asreml_m2, classify = "TREATMENT", sed = TRUE)$pvals
+pred_asreml2 |> 
+	add_confidence_intervals(pred_col = predicted.value, se_col = std.error)
+```
+
+
+```{r, eval=TRUE, echo=FALSE}
+pred_asreml2 |> 
+	add_confidence_intervals(pred_col = predicted.value, se_col = std.error) |> 
+	head(10) |> 
+	kable()
 ```
 
 ### Model fit diagnostics
@@ -651,7 +684,7 @@ ggplot(rank_comparison, aes(x = rank_asreml, y = rank_gam_total)) +
 
 We also examine the standard errors of the predicted treatment means. Comparing these across models provides insight into how uncertainty is estimated. Despite their different formulations, both GAM and ASReml produce strikingly similar standard errors across genotypes:
 
-```{r, fig.align="c", fig.width=12, fig.height=6, echo=FALSE, eval=TRUE}
+```{r, fig.align="c", fig.width=12, fig.height=7, echo=FALSE, eval=TRUE}
 # Prepare long-format data
 se_long <- BLUPs_gam_single2 |>
 	select(TREATMENT, se_gam = se) |>
@@ -694,6 +727,21 @@ Our goal was not to determine which model is superior, but rather to explore how
 ### Reproducibility
 
 The full code used in this analysis is available on GitHub: github.com/DidierMurilloF/PhenoGams
+
+### References
+
+This work draws inspiration from _Generalized Additive Models: An Introduction with R (2nd Edition)_ by Simon Wood, an accessible and practical guide to understanding and implementing GAMs using the `mgcv` package.
+
+
+### About the Author
+
+**Didier Murillo** is a statistician and R Shiny developer specializing in agricultural data analytics at North Dakota State University (NDSU). His research focuses on spatial modeling, predictive pipelines, and the integration of genomic and phenotypic data in plant breeding programs. He is also an expert in developing robust R Shiny applications that integrate analytical pipelines into user-friendly tools for researchers, breeders, and other stakeholders.
+
+Connect with Didier on [![GitHub Repo](https://img.shields.io/badge/GitHub-PhenoGams-blue?logo=github)](https://github.com/DidierMurilloF/PhenoGams)
+or [LinkedIn](https://www.linkedin.com/in/damurillof/).
+
+
+
 
 
 
